# hyprland-welcome

./: .clang-tidy  .gitignore  CMakeLists.txt  Logo.qrc  README.md  chyprlandwelcome.cpp  chyprlandwelcome.h  chyprlandwelcome.ui  main.cpp
assets/: Logo.qrc
src/: main.cpp
